--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<!-- <nav class="navbar">
     <div class="logo">
         <img src="https://tse1.mm.bing.net/th?id=OIP.fo8LCyCn396RvFG4nqqzqQHaDF&pid=Api&P=0&h=180" alt="Logo">
     </div>
@@ -6,7 +6,7 @@
 </nav>
 
 <div class="sections">
-    <!-- Previous sections here -->
+
     <section id="section1" class="center-content">
         <h1>Elevate <b style="color:blue;">Real Estate Success</b> with Osumare's Digital Expertise</h1>
         <p>Tailored Solutions for Thriving in the Digital Real Estate Landscape</p>
@@ -377,4 +377,4 @@
     </footer>
 
 
-</div>
+</div> -->
